# k8s_poc

./: .dockerignore  .flake8  .gitignore  README.md  docker-compose.yml  harvester.py  ingestor.py  install.sh  pyproject.toml  requirements.txt  sample-mat-config.yml  sample.env  subscriber.py  test-requirements.txt  uninstall.sh
.docker/: db-migrate.dockerfile  harvester.dockerfile  ingestor.dockerfile
.k8s/: db-deployment.yaml  db-migrate-claim0-persistentvolumeclaim.yaml  db-migrate-deployment.yaml  db-service.yaml  harvester-stocks-deployment.yaml  ingestor-stocks-deployment.yaml  k8s-poc-default-networkpolicy.yaml  kafka-deployment.yaml  kafka-service.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
Harvester/: schema_enforcement.py
Ingestor/: README.md  schema_enforcement.py
alembic/: env.py
py-harvester/: README.md  pyproject.toml
py-harvester/docker/: App.dockerfile  docker-entrypoint.sh
py-harvester/py_harvester/: main.py
py-harvester/py_harvester/marshmallowSchemas/: AlphaVantageSchema.py  BaseSchemas.py  utils.py
py-harvester/py_harvester/sources/: AlphaVantage.py
py-harvester/tests/: conftest.py
py-harvester/tests/test_data/alphavantage/expected/: test_AlphaVantageTimeSeriesSchema_clean_time_series_dictionary_list.json
py-harvester/tests/test_data/alphavantage/given/: crypto_time_series_daily.json  crypto_time_series_weekly.json  market_balance_sheet.json  market_cash_flow.json  market_company_overview.json  market_income_statement.json  market_time_series_daily.json  market_time_series_daily_adjusted.json  market_time_series_intraday_15min.json  market_time_series_intraday_1min.json  market_time_series_intraday_5min.json  market_time_series_monthly.json  market_time_series_monthly_adjusted.json  market_time_series_weekly.json  market_time_series_weekly_adjusted.json
py-harvester/tests/unit/: testAlphaVantageSchema.py  test_AlphaVantageSchema.py
(+55 files in other folders)
