[tool.poetry]
name = "py-harvester"
version = "0.1.0"
description = ""
authors = ["king-ak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
marshmallow = "^3.12.1"
simplejson = "^3.17.5"
backoff = "^2.2.1"
kafka-python = "^2.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2 "
coverage = { version = "5.0.3", extras = ["toml"]}
parameterized = "^0.7.4"
flake8 = "^3.8.4"
autopep8 = "^1.4.4"


[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]

    source = ["py_harvester"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
